@@ -1,4 +1,5 @@
-2004-05-03: PHOEBE_0.24 beta version released.
+2004-07-23:	PHOEBE_0.25 beta version released.
+2004-05-03:	PHOEBE_0.24 beta version released.
 2004-04-14:	PHOEBE_0.23 beta version released.
 2004-01-19:	PHOEBE_0.22 beta version released.
 2003-12-01:	PHOEBE_0.21 beta version released.
